8313733: CDS is disabled when java.base module is patched